--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
   },
   "dependencies": {
     "@adonisjs/auth": "^9.3.0",
+    "@adonisjs/bouncer": "^3.1.4",
     "@adonisjs/core": "^6.14.1",
     "@adonisjs/cors": "^2.2.1",
     "@adonisjs/lucid": "^21.3.0",
