--- a/package.json
+++ b/package.json
@@ -26,10 +26,15 @@
     "build": "node ace build",
     "dev": "node ace serve --hmr",
     "format": "prettier --write .",
+    "format:check": "prettier --check .",
     "lint": "eslint .",
+    "prepare": "husky || true",
     "start": "node bin/server.js",
     "test": "node ace test",
     "typecheck": "tsc --noEmit"
+  },
+  "lint-staged": {
+    "*": "prettier -w --ignore-unknown"
   },
   "prettier": "@solvro/config/prettier",
   "resolutions": {
@@ -50,16 +55,19 @@
   "devDependencies": {
     "@adonisjs/assembler": "^7.8.2",
     "@adonisjs/tsconfig": "^1.4.0",
+    "@commitlint/cli": "^19.7.1",
     "@japa/api-client": "^2.0.3",
     "@japa/assert": "^3.0.0",
     "@japa/plugin-adonisjs": "^3.0.1",
     "@japa/runner": "^3.1.4",
-    "@solvro/config": "^1.5.5",
+    "@solvro/config": "^1.13.3",
     "@swc/core": "1.7.26",
     "@types/luxon": "^3.4.2",
     "@types/node": "^22.7.5",
     "eslint": "^9.12.0",
     "hot-hook": "^0.3.1",
+    "husky": "^9.1.7",
+    "lint-staged": "^15.4.3",
     "pino-pretty": "^11.2.2",
     "prettier": "^3.3.3",
     "ts-node-maintained": "^10.9.4",
