fix: fix event participants export

--- a/.env.example
+++ b/.env.example
@@ -10,3 +10,4 @@ DB_USER=root
 DB_PASSWORD=root
 DB_DATABASE=solvro_eventownik
 PHOTO_STORAGE_URL=storage/event-photos/
+TEMP_STORAGE_URL=storage/temp/
