--- a/.env.example
+++ b/.env.example
@@ -11,3 +11,4 @@ DB_PASSWORD=root
 DB_DATABASE=solvro_eventownik
 PHOTO_STORAGE_URL=public/
 TEMP_STORAGE_URL=storage/temp/
+FILE_STORAGE_URL=uploads
