--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@adonisjs/core": "^6.14.1",
     "@adonisjs/cors": "^2.2.1",
     "@adonisjs/lucid": "^21.3.0",
+    "@adonisjs/mail": "^9.2.2",
     "@adonisjs/static": "^1.1.1",
     "@outloud/adonis-autoswagger": "^1.8.7",
     "@vinejs/vine": "^2.1.0",
