feat: fill out example SMTP config

--- a/.env.example
+++ b/.env.example
@@ -12,7 +12,7 @@ DB_DATABASE=solvro_eventownik
 PHOTO_STORAGE_URL=public/
 TEMP_STORAGE_URL=storage/temp/
 FILE_STORAGE_URL=uploads/
-SMTP_HOST=
-SMTP_PORT=
-SMTP_USERNAME=
-SMTP_PASSWORD=
+SMTP_HOST=mail.solvro.pl
+SMTP_PORT=465
+SMTP_USERNAME=eventownik@solvro.pl
+SMTP_PASSWORD=EloŻelo
