fix: pr comments

--- a/.env.example
+++ b/.env.example
@@ -16,4 +16,4 @@ SMTP_HOST=mail.solvro.pl
 SMTP_PORT=465
 SMTP_USERNAME=eventownik@solvro.pl
 SMTP_PASSWORD=EloŻelo
-DOMAIN=https://eventownik.solvro.pl
+APP_DOMAIN=https://eventownik.solvro.pl
