--- a/package.json
+++ b/package.json
@@ -48,12 +48,18 @@
     "@adonisjs/lucid": "^21.3.0",
     "@adonisjs/mail": "^9.2.2",
     "@adonisjs/static": "^1.1.1",
+    "@opentelemetry/auto-instrumentations-node": "^0.62.2",
+    "@opentelemetry/exporter-logs-otlp-http": "^0.204.0",
+    "@opentelemetry/exporter-trace-otlp-http": "^0.203.0",
+    "@opentelemetry/resources": "^2.0.1",
+    "@opentelemetry/sdk-node": "^0.203.0",
     "@outloud/adonis-autoswagger": "^1.8.7",
     "@vinejs/vine": "^2.1.0",
     "adonis-autoswagger": "^3.66.0",
     "exceljs": "^4.4.0",
     "luxon": "^3.5.0",
     "pg": "^8.13.1",
+    "pino-opentelemetry-transport": "^1.0.1",
     "reflect-metadata": "^0.2.2"
   },
   "devDependencies": {
