feat: move signoz integration to provider

--- a/.env.example
+++ b/.env.example
@@ -17,3 +17,4 @@ SMTP_PORT=465
 SMTP_USERNAME=eventownik@solvro.pl
 SMTP_PASSWORD=EloŻelo
 APP_DOMAIN=https://eventownik.solvro.pl
+SIGNOZ_HOST=http://localhost:4318
