--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "@outloud/adonis-autoswagger": "^1.8.7",
     "@vinejs/vine": "^2.1.0",
     "adonis-autoswagger": "^3.66.0",
+    "edge.js": "^6.3.0",
     "exceljs": "^4.4.0",
     "luxon": "^3.5.0",
     "pg": "^8.13.1",
