fix: .env stuff

--- a/.env.example
+++ b/.env.example
@@ -18,3 +18,4 @@ SMTP_USERNAME=eventownik@solvro.pl
 SMTP_PASSWORD=EloŻelo
 APP_DOMAIN=https://eventownik.solvro.pl
 SIGNOZ_HOST=http://localhost:4318
+HCAPTCHA_SECRET=ES_00000000000000000000000000000000
